# image-movement

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
imagemovement/: __init__.py  cli.py  config.py  corpus.py  data.py  datasets.py  detector.py  evaluate.py  perturb.py  server.py  service.py  stage1_hash.py  stage2_geom.py
tests/: test_index.py  test_server.py  test_service.py
