[project]
name = "imagemovement"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.14.2",
    "fastapi>=0.136.3",
    "imagehash>=4.3.2",
    "numpy>=2.4.6",
    "opencv-contrib-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.30",
    "scikit-learn>=1.8.0",
    "uvicorn[standard]>=0.48.0",
]
