[project]
name = "imagemovement"
version = "0.1.0"
description = "Detect reuse of the same core image across a collection — robust to zoom, pixel shift, and JPEG re-compression"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "imagehash>=4.3.2",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
]

[project.optional-dependencies]
faiss = ["faiss-cpu>=1.14.2"]
eval = ["scikit-learn>=1.8.0"]
server = [
    "fastapi>=0.136.3",
    "python-multipart>=0.0.30",
    "uvicorn[standard]>=0.48.0",
]

[project.urls]
Repository = "https://github.com/mitchjablonski/image-movement"
